fixed footer and new assets, changed landing descriptions

--- a/actividades.html
+++ b/actividades.html
@@ -185,7 +185,7 @@ The above copyright notice and this permission notice shall be included in all c
                         <h6 class="nav-item nav-link">Jalisco Decide</h6>
                         <!-- class="nav-item nav-link" -->
 
-                        <a class="nav-item nav-link" style="color: white;" href="index.html#FinCentralismo">Fin al
+                        <a class="nav-item nav-link" style="color: white;" href="index.html#FinCentralismo">Fin del
                             centralismo</a>
                         <a class="nav-item nav-link" style="color: white;" href="index.html#AmpliarDerechos">Ampliar
                             Derechos</a>
