--- a/equipo.html
+++ b/equipo.html
@@ -852,7 +852,7 @@ The above copyright notice and this permission notice shall be included in all c
                         <h6 class="nav-item nav-link">Jalisco Decide</h6>
                         <!-- class="nav-item nav-link" -->
 
-                        <a class="nav-item nav-link" style="color: white;" href="index.html#FinCentralismo">Fin al
+                        <a class="nav-item nav-link" style="color: white;" href="index.html#FinCentralismo">Fin del
                             centralismo</a>
                         <a class="nav-item nav-link" style="color: white;" href="index.html#AmpliarDerechos">Ampliar
                             Derechos</a>
@@ -897,8 +897,6 @@ The above copyright notice and this permission notice shall be included in all c
     <script src="../assets/js/paper-kit.js?v=2.2.0" type="text/javascript"></script>
     <!--  Google Maps Plugin    -->
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>
-    <!-- SMOOTH SCROLL -->
-    <script src="//cdn.jsdelivr.net/npm/jquery.localscroll@2.0.0/jquery.localScroll.min.js"></script>
     <!-- SCROLL -->
     <script>
         $('#collapseTeam1').on('shown.bs.collapse', function () {
