--- a/index.html
+++ b/index.html
@@ -142,10 +142,10 @@ The above copyright notice and this permission notice shall be included in all c
           <!-- PARTE DERECHA HEADER -->
           <div class="col-md-6 ml-auto mr-auto mt-5 mb-5" style="text-align: left;">
             <h2 class="title">Ampliar Derechos</h2>
-            <h5>No luchamos exclusivamente para que Jalisco y los 31 Estados Libres y Soberanos que
-              conforman la Federación recuperemos el derecho a decidir sobre su futuro. Queremos que los municipios,
-              localidades y comunidades recuperen la soberanía de forma radical para conducir sus vidas desde el poder
-              colectivo. Todo el poder a la gente. Más democracia. </h5>
+            <h5>No luchamos exclusivamente para que Jalisco y los 31 Estados Libres y Soberanos que conforman la
+              Federación recuperemos el derecho a decidir sobre nuestro futuro. Queremos que los municipios, localidades
+              y comunidades recuperen la soberanía de forma radical para conducir sus vidas desde el poder colectivo.
+              Todo el poder a la gente. Más democracia. </h5>
           </div>
           <!-- PARTE DERECHA HEADER -->
 
@@ -205,9 +205,10 @@ The above copyright notice and this permission notice shall be included in all c
               <img class="card-img-top" src="/assets/img/jaliscoDecide/landing/MapaFiscal.jpg" alt="Card image cap">
               <div class="card-body">
                 <h4 class="card-title">Mapa Fiscal</h4>
-                <p class="card-text">Vamos a reformar nuestro sistema fiscal para aprovechar mejor nuestros recursos y
-                  exigir lo que es nuestro. Contamos con un equipo interdisciplinario de especialistas de primer nivel
-                  que están construyendo la ruta para lograrlo.</p>
+                <p class="card-text">Vamos a reformar el sistema fiscal para aprovechar mejor nuestros recursos y exigir
+                  lo justo, bajo un esquema de equidad y solidaridad fiscal con los otros Estados Libres y Soberanos.
+                  Contamos con un equipo interdisciplinario de especialistas de primer nivel que están construyendo la
+                  ruta para lograrlo.</p>
                 <!-- <a href="#" class="btn btn-primary">Descargar</a> -->
               </div>
             </div>
@@ -300,7 +301,7 @@ The above copyright notice and this permission notice shall be included in all c
             <h6 class="nav-item nav-link">Jalisco Decide</h6>
             <!-- class="nav-item nav-link" -->
 
-            <a class="nav-item nav-link" style="color: white;" href="index.html#FinCentralismo">Fin al
+            <a class="nav-item nav-link" style="color: white;" href="index.html#FinCentralismo">Fin del
               centralismo</a>
             <a class="nav-item nav-link" style="color: white;" href="index.html#AmpliarDerechos">Ampliar
               Derechos</a>
