--- a/transparencia.html
+++ b/transparencia.html
@@ -165,35 +165,40 @@ The above copyright notice and this permission notice shall be included in all c
                 <div class="tab-content" id="nav-tabContent">
                     <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
                         <!-- TITULO Y FECHA -->
-                        <!-- <div class="row ml-auto  mr-auto" style="justify-content: flex-start;">
-                            <h1 class="title" style="margin-bottom: 0px;">Titulo</h1>
+                        <div class="row ml-auto  mr-auto" style="justify-content: flex-start;">
+                            <h1 class="title" style="margin-bottom: 0px;">Minuta 1</h1>
 
                         </div>
                         <div class="row ml-auto mr-auto mt-0 mb-4" style="justify-content: flex-start;">
-                            <p>Fecha</p>
-                        </div> -->
+                            <p>27 de noviembre de 2020</p>
+                        </div>
                         <!-- TITULO Y FECHA -->
 
                         <!-- BOTON DL -->
-                        <!-- <div class="row ml-auto mr-auto mt-0" style="justify-content: flex-start;">
-                            <button class="btn btn-primary">Descargar</button>
-                        </div> -->
+                        <div class="row ml-auto mr-auto mt-0" style="justify-content: flex-start;">
+                            <a
+                                href="https://drive.google.com/file/d/13CKO1695tlwUbtLJv2jOU2mxhlI9ARq0/view?usp=sharing"><button
+                                    class="btn btn-primary">Descargar</button></a>
+                        </div>
                         <!-- BOTON DL -->
 
                         <!-- TITULO Y FECHA -->
-                        <!-- <div class="row ml-auto  mr-auto" style="justify-content: flex-start;">
-                            <h1 class="title" style="margin-bottom: 0px;">Titulo2</h1>
+                        <div class="row ml-auto  mr-auto" style="justify-content: flex-start;">
+                            <h1 class="title" style="margin-bottom: 0px;">Minuta 2</h1>
 
                         </div>
                         <div class="row ml-auto mr-auto mt-0 mb-4" style="justify-content: flex-start;">
-                            <p>Fecha</p>
-                        </div> -->
+                            <p>14 de diciembre de 2020</p>
+                        </div>
                         <!-- TITULO Y FECHA -->
 
                         <!-- BOTON DL -->
-                        <!-- <div class="row ml-auto mr-auto mt-0" style="justify-content: flex-start;">
-                            <button class="btn btn-primary">Descargar</button>
-                        </div> -->
+                        <div class="row ml-auto mr-auto mt-0" style="justify-content: flex-start;">
+                            <a
+                                href="https://drive.google.com/file/d/1usSee_c4foR3bqstZGTfmGnI6gBr1LA1/view?usp=sharing">
+                                <button class="btn btn-primary">Descargar</button>
+                            </a>
+                        </div>
                         <!-- BOTON DL -->
                     </div>
                     <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">
