--- a/nahuatl-wixarika.html
+++ b/nahuatl-wixarika.html
@@ -89,7 +89,7 @@ The above copyright notice and this permission notice shall be included in all c
 
     <!-- HEADER grande y IPAD-->
     <div class="page-header page-header-xs d-none d-sm-block" data-parallax="true"
-        style="background-image: url('/assets/img/jaliscoDecide/actividades/header.png');">
+        style="background-image: url('/assets/img/jaliscoDecide/comunidades/header.png');">
         <!-- <div class="filter">
         </div> -->
         <div class="container">
@@ -123,9 +123,16 @@ The above copyright notice and this permission notice shall be included in all c
                         <!-- <h2 class="title">Fin del Centralismo.</h2> -->
                         <h5>
 
-                            Aquí podrás encontrar la ruta que estamos construyendo para que Jalisco recupere su
-                            soberanía y dotar a las personas que vivimos en nuestro estado de más derechos, más
-                            libertades y más bienestar.
+                            Jalisco es un territorio plurinacional, aunque no esté reconocido por la ley. Esto quiere
+                            decir que no todas las personas en el Estado de Jalisco se identifican como mexicanas, y/o
+                            tienen un idioma distinto al español.
+                            <br><br>
+                            Creemos que Jalisco debe de garantizar el derecho de las naciones y comunidades indígenas a
+                            la autodeterminación radical bajo un esquema de plurinacionalidad.
+                            <br><br>
+
+                            Estamos trabajando para producir contenidos de calidad en los dos idiomas indígenas más
+                            hablados de Jalisco: el náhuatl y el wixárika.
 
                         </h5>
                     </div>
@@ -207,8 +214,8 @@ The above copyright notice and this permission notice shall be included in all c
                         <a class="nav-item nav-link" style="color: white;" href="equipo.html">¿Quiénes Somos?</a>
                         <a class="nav-item nav-link" style="color: white;" href="actividades.html">Actividades</a>
                         <a class="nav-item nav-link" style="color: white;" href="transparencia.html">Transparencia</a>
-                        <a class="nav-item nav-link" style="color: white;" href="nahuatl-wixarika.html">Náhuatl /
-                            Wixárika</a>
+                        <a class="nav-item nav-link" style="color: white;" href="nahuatl-wixarika.html">Náhuatl / Wixárika</a>
+
 
 
                     </nav>
