--- a/debateNoticias/noticiaElecciones.html
+++ b/debateNoticias/noticiaElecciones.html
@@ -70,6 +70,9 @@ The above copyright notice and this permission notice shall be included in all c
                     <li class="nav-item">
                         <a href="/transparencia.html" class="nav-link">Transparencia</a>
                     </li>
+                    <li class="nav-item">
+                        <a href="/nahuatl-wixarika.html" class="nav-link" style="color: black;">Náhuatl / Wixárika</a>
+                    </li>
 
                     <!-- <form class="form-inline ml-auto mr-auto">
                         <div class="form-group has-white">
@@ -300,6 +303,8 @@ The above copyright notice and this permission notice shall be included in all c
                         <a class="nav-item nav-link" style="color: white;" href="/equipo.html">¿Quiénes Somos?</a>
                         <a class="nav-item nav-link" style="color: white;" href="/actividades.html">Actividades</a>
                         <a class="nav-item nav-link" style="color: white;" href="/transparencia.html">Transparencia</a>
+                        <a class="nav-item nav-link" style="color: white;" href="/nahuatl-wixarika.html">Náhuatl /
+                            Wixárika</a>
 
 
                     </nav>
