--- a/equipo.html
+++ b/equipo.html
@@ -59,16 +59,19 @@ The above copyright notice and this permission notice shall be included in all c
             <div class="collapse navbar-collapse justify-content-end" id="navigation">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a href="debate.html" class="nav-link">Debate</a>
+                        <a href="debate.html" class="nav-link" style="color: black;">Debate</a>
                     </li>
                     <li class="nav-item">
-                        <a href="equipo.html" class="nav-link">¿Quiénes Somos?</a>
+                        <a href="equipo.html" class="nav-link" style="color: black;">¿Quiénes Somos?</a>
                     </li>
                     <li class="nav-item">
-                        <a href="actividades.html" class="nav-link">Actividades</a>
+                        <a href="actividades.html" class="nav-link" style="color: black;">Actividades</a>
                     </li>
                     <li class="nav-item">
-                        <a href="transparencia.html" class="nav-link">Transparencia</a>
+                        <a href="transparencia.html" class="nav-link" style="color: black;">Transparencia</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="nahuatl-wixarika.html" class="nav-link" style="color: black;">Náhuatl / Wixárika</a>
                     </li>
 
                     <!-- <form class="form-inline ml-auto mr-auto">
@@ -871,6 +874,8 @@ The above copyright notice and this permission notice shall be included in all c
                         <a class="nav-item nav-link" style="color: white;" href="equipo.html">¿Quiénes Somos?</a>
                         <a class="nav-item nav-link" style="color: white;" href="actividades.html">Actividades</a>
                         <a class="nav-item nav-link" style="color: white;" href="transparencia.html">Transparencia</a>
+                        <a class="nav-item nav-link" style="color: white;" href="nahuatl-wixarika.html">Náhuatl /
+                            Wixárika</a>
 
 
                     </nav>
