QoL improvements on links

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ The above copyright notice and this permission notice shall be included in all c
   <nav class="navbar navbar-expand-lg fixed-top  navbar-light">
     <div class="container">
       <div class="navbar-translate">
-        <a class="navbar-brand" href="index.html">
+        <a class="navbar-brand" href="index">
           <div class="logo-image">
             <img src="/assets/img/jaliscoDecide/isotipoNavBar.png" class="img-fluid">
           </div>
@@ -56,19 +56,19 @@ The above copyright notice and this permission notice shall be included in all c
       <div class="collapse navbar-collapse justify-content-end" id="navigation">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a href="debate.html" class="nav-link" style="color: black;">Debate</a>
+            <a href="debate" class="nav-link" style="color: black;">Debate</a>
           </li>
           <li class="nav-item">
-            <a href="equipo.html" class="nav-link" style="color: black;">¿Quiénes Somos?</a>
+            <a href="equipo" class="nav-link" style="color: black;">¿Quiénes Somos?</a>
           </li>
           <li class="nav-item">
-            <a href="actividades.html" class="nav-link" style="color: black;">Actividades</a>
+            <a href="actividades" class="nav-link" style="color: black;">Actividades</a>
           </li>
           <li class="nav-item">
-            <a href="transparencia.html" class="nav-link" style="color: black;">Transparencia</a>
+            <a href="transparencia" class="nav-link" style="color: black;">Transparencia</a>
           </li>
           <li class="nav-item">
-            <a href="nahuatl-wixarika.html" class="nav-link" style="color: black;">Náhuatl / Wixárika</a>
+            <a href="nahuatl-wixarika" class="nav-link" style="color: black;">Náhuatl / Wixárika</a>
           </li>
 
           <!-- <form class="form-inline ml-auto mr-auto">
@@ -304,12 +304,12 @@ The above copyright notice and this permission notice shall be included in all c
             <h6 class="nav-item nav-link">Jalisco Decide</h6>
             <!-- class="nav-item nav-link" -->
 
-            <a class="nav-item nav-link" style="color: white;" href="index.html#FinCentralismo">Fin del
+            <a class="nav-item nav-link" style="color: white;" href="index#FinCentralismo">Fin del
               centralismo</a>
-            <a class="nav-item nav-link" style="color: white;" href="index.html#AmpliarDerechos">Ampliar
+            <a class="nav-item nav-link" style="color: white;" href="index#AmpliarDerechos">Ampliar
               Derechos</a>
-            <a class="nav-item nav-link" style="color: white;" href="index.html#Como">Ganar el futuro</a>
-            <a class="nav-item nav-link" style="color: white;" href="index.html#Documentos">Documentos</a>
+            <a class="nav-item nav-link" style="color: white;" href="index#Como">Ganar el futuro</a>
+            <a class="nav-item nav-link" style="color: white;" href="index#Documentos">Documentos</a>
 
 
           </nav>
@@ -318,12 +318,12 @@ The above copyright notice and this permission notice shall be included in all c
           <nav class="footer-nav">
             <h6 class="nav-item nav-link">Secciones</h6>
 
-            <a class="nav-item nav-link" style="color: white;" href="index.html">Inicio</a>
-            <a class="nav-item nav-link" style="color: white;" href="debate.html">Debate</a>
-            <a class="nav-item nav-link" style="color: white;" href="equipo.html">¿Quiénes Somos?</a>
-            <a class="nav-item nav-link" style="color: white;" href="actividades.html">Actividades</a>
-            <a class="nav-item nav-link" style="color: white;" href="transparencia.html">Transparencia</a>
-            <a class="nav-item nav-link" style="color: white;" href="nahuatl-wixarika.html">Náhuatl / Wixárika</a>
+            <a class="nav-item nav-link" style="color: white;" href="index">Inicio</a>
+            <a class="nav-item nav-link" style="color: white;" href="debate">Debate</a>
+            <a class="nav-item nav-link" style="color: white;" href="equipo">¿Quiénes Somos?</a>
+            <a class="nav-item nav-link" style="color: white;" href="actividades">Actividades</a>
+            <a class="nav-item nav-link" style="color: white;" href="transparencia">Transparencia</a>
+            <a class="nav-item nav-link" style="color: white;" href="nahuatl-wixarika">Náhuatl / Wixárika</a>
 
 
           </nav>
