QoL improvements on links

--- a/actividades.html
+++ b/actividades.html
@@ -188,12 +188,12 @@ The above copyright notice and this permission notice shall be included in all c
                         <h6 class="nav-item nav-link">Jalisco Decide</h6>
                         <!-- class="nav-item nav-link" -->
 
-                        <a class="nav-item nav-link" style="color: white;" href="index#FinCentralismo">Fin del
+                        <a class="nav-item nav-link" style="color: white;" href="/#FinCentralismo">Fin del
                             centralismo</a>
-                        <a class="nav-item nav-link" style="color: white;" href="index#AmpliarDerechos">Ampliar
+                        <a class="nav-item nav-link" style="color: white;" href="/#AmpliarDerechos">Ampliar
                             Derechos</a>
-                        <a class="nav-item nav-link" style="color: white;" href="index#Como">Ganar el futuro</a>
-                        <a class="nav-item nav-link" style="color: white;" href="index#Documentos">Documentos</a>
+                        <a class="nav-item nav-link" style="color: white;" href="/#Como">Ganar el futuro</a>
+                        <a class="nav-item nav-link" style="color: white;" href="/#Documentos">Documentos</a>
 
 
                     </nav>
@@ -202,7 +202,7 @@ The above copyright notice and this permission notice shall be included in all c
                     <nav class="footer-nav">
                         <h6 class="nav-item nav-link">Secciones</h6>
 
-                        <a class="nav-item nav-link" style="color: white;" href="index">Inicio</a>
+                        <a class="nav-item nav-link" style="color: white;" href="/">Inicio</a>
                         <a class="nav-item nav-link" style="color: white;" href="debate">Debate</a>
                         <a class="nav-item nav-link" style="color: white;" href="equipo">¿Quiénes Somos?</a>
                         <a class="nav-item nav-link" style="color: white;" href="actividades">Actividades</a>
