--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ The above copyright notice and this permission notice shall be included in all c
   <nav class="navbar navbar-expand-lg fixed-top  navbar-light">
     <div class="container">
       <div class="navbar-translate">
-        <a class="navbar-brand" href="index">
+        <a class="navbar-brand" href="/">
           <div class="logo-image">
             <img src="/assets/img/jaliscoDecide/isotipoNavBar.png" class="img-fluid">
           </div>
@@ -304,12 +304,12 @@ The above copyright notice and this permission notice shall be included in all c
             <h6 class="nav-item nav-link">Jalisco Decide</h6>
             <!-- class="nav-item nav-link" -->
 
-            <a class="nav-item nav-link" style="color: white;" href="index#FinCentralismo">Fin del
+            <a class="nav-item nav-link" style="color: white;" href="/#FinCentralismo">Fin del
               centralismo</a>
-            <a class="nav-item nav-link" style="color: white;" href="index#AmpliarDerechos">Ampliar
+            <a class="nav-item nav-link" style="color: white;" href="/#AmpliarDerechos">Ampliar
               Derechos</a>
-            <a class="nav-item nav-link" style="color: white;" href="index#Como">Ganar el futuro</a>
-            <a class="nav-item nav-link" style="color: white;" href="index#Documentos">Documentos</a>
+            <a class="nav-item nav-link" style="color: white;" href="/#Como">Ganar el futuro</a>
+            <a class="nav-item nav-link" style="color: white;" href="/#Documentos">Documentos</a>
 
 
           </nav>
@@ -318,7 +318,7 @@ The above copyright notice and this permission notice shall be included in all c
           <nav class="footer-nav">
             <h6 class="nav-item nav-link">Secciones</h6>
 
-            <a class="nav-item nav-link" style="color: white;" href="index">Inicio</a>
+            <a class="nav-item nav-link" style="color: white;" href="/">Inicio</a>
             <a class="nav-item nav-link" style="color: white;" href="debate">Debate</a>
             <a class="nav-item nav-link" style="color: white;" href="equipo">¿Quiénes Somos?</a>
             <a class="nav-item nav-link" style="color: white;" href="actividades">Actividades</a>
